--- a/springbootMybatis/pom.xml
+++ b/springbootMybatis/pom.xml
@@ -44,7 +44,7 @@
             <scope>test</scope>
         </dependency>
 
-<!--        DAO层   mysql和mybatis依赖-->
+<!--        DAO层   mysql和mybatis druid依赖-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -60,6 +60,14 @@
             <artifactId>spring-tx</artifactId>
             <version>5.3.18</version>
         </dependency>
+
+        <!--引入druid数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.21</version>
+        </dependency>
+
 
 
     </dependencies>
