--- a/springbootMybatis/pom.xml
+++ b/springbootMybatis/pom.xml
@@ -98,6 +98,13 @@
             </exclusions>
         </dependency>
 
+        <!-- AMQP依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+
 
 
     </dependencies>
